auto-test/tests/chapter_7/invalid_semantics/extra_credit/different_labels_same_scope.c
int main(void) {
    
label1:;
    int a = 10;
label2:;
    int a = 11;
    return 1;
}